<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        app:elevation="@dimen/no_space">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout_detail"
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_back_cover"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:alpha="0.3"
                    android:contentDescription="@string/poster_cover"
                    android:scaleType="centerCrop"
                    android:src="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_loading" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_cover"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/default_space"
                    app:cardCornerRadius="@dimen/default_space"
                    app:cardElevation="@dimen/no_space"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/iv_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/poster"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/ic_loading" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/iv_image_star"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="@dimen/small_space"
                    android:layout_marginBottom="@dimen/small_space"
                    android:contentDescription="@string/image_star"
                    android:padding="@dimen/tiny_space"
                    android:src="@drawable/ic_baseline_star_rate_24"
                    app:layout_constraintBottom_toTopOf="@id/v_guideLine"
                    app:layout_constraintStart_toEndOf="@id/cv_cover"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/tv_rate"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_space"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/iv_image_star"
                    app:layout_constraintStart_toEndOf="@id/iv_image_star"
                    app:layout_constraintTop_toTopOf="@id/iv_image_star"
                    tools:text="@string/rate" />

                <View
                    android:id="@+id/v_guideLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/transparent"
                    app:layout_constraintTop_toBottomOf="@id/iv_back_cover" />

                <TextView
                    android:id="@+id/tv_text_member"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="@dimen/no_space"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_space"
                    android:layout_marginTop="@dimen/tiny_space"
                    android:text="@string/member"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/iv_image_star"
                    app:layout_constraintTop_toBottomOf="@id/v_guideLine" />

                <TextView
                    android:id="@+id/tv_member"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="@dimen/no_space"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_space"
                    android:layout_marginTop="@dimen/tiny_space"
                    app:layout_constraintStart_toStartOf="@id/iv_image_star"
                    app:layout_constraintTop_toBottomOf="@id/tv_text_member"
                    tools:text="@string/member" />

                <View
                    android:id="@+id/v_guideMember"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/tiny_space"
                    android:background="@android:color/transparent"
                    app:layout_constraintTop_toBottomOf="@id/tv_member" />

                <TextView
                    android:id="@+id/tv_text_year"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="@dimen/no_space"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_space"
                    android:layout_marginTop="@dimen/tiny_space"
                    android:text="@string/year"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/iv_image_star"
                    app:layout_constraintTop_toBottomOf="@id/v_guideMember" />

                <TextView
                    android:id="@+id/tv_year"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="@dimen/no_space"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_space"
                    android:layout_marginTop="@dimen/tiny_space"
                    app:layout_constraintStart_toStartOf="@id/iv_image_star"
                    app:layout_constraintTop_toBottomOf="@id/tv_text_year"
                    tools:text="@string/year" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways">

                <FrameLayout
                    android:id="@+id/frameLayout_actionBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_action_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/image_action_back"
                        android:src="@drawable/ic_baseline_arrow_back_24"
                        app:tint="@color/black" />

                    <ImageView
                        android:id="@+id/iv_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="38dp"
                        android:contentDescription="@string/image_favorite"
                        android:src="@drawable/ic_baseline_favorite_border_24"
                        app:tint="@color/black" />

                    <ImageView
                        android:id="@+id/iv_action_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="@dimen/medium_space"
                        android:contentDescription="@string/image_action_share"
                        android:src="@drawable/ic_baseline_share_24"
                        app:tint="@color/black" />

                </FrameLayout>


            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/progressBar_detail"
                layout="@layout/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/layout_content_detail"
                layout="@layout/content_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>